--- a/wksp/timehammer/statemachine/src/main/resources/application.yaml
+++ b/wksp/timehammer/statemachine/src/main/resources/application.yaml
@@ -11,10 +11,25 @@ mp:
         topic: status-worker-notify
         value:
           deserializer: com.kronostools.timehammer.common.messages.schedules.deserializers.CheckWorkersStatusWorkerJacksonDeserializer
+      answer-process:
+        connector: smallrye-kafka
+        topic: answer-process
+        value:
+          deserializer: com.kronostools.timehammer.common.messages.telegramchatbot.deserializers.TelegramChatbotAnswerMessageJacksonDeserializer
     outgoing:
       status-worker-notify-out:
         connector: smallrye-kafka
         topic: status-worker-notify
+        value:
+          serializer: io.quarkus.kafka.client.serialization.ObjectMapperSerializer
+      answer-execute:
+        connector: smallrye-kafka
+        topic: answer-execute
+        value:
+          serializer: io.quarkus.kafka.client.serialization.ObjectMapperSerializer
+      answer-notify:
+        connector: smallrye-kafka
+        topic: answer-notify
         value:
           serializer: io.quarkus.kafka.client.serialization.ObjectMapperSerializer
       notification-telegram:
