- (WIP) event-driven architecture refactor - fixeds

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -217,6 +217,7 @@ services:
     volumes:
       - ./wksp/timehammer:/root/wksp/timehammer
       - ${HOME}/.m2/repository:/root/.m2/repository
+      - statemachinedata:/data
     working_dir: /root/wksp/timehammer/statemachine
     command: ["mvn", "-Dquarkus.profile=remotedemo", "quarkus:dev"]
     depends_on:
@@ -228,6 +229,7 @@ services:
 volumes:
   dbdata:
   comunytekdata:
+  statemachinedata:
 
 networks:
   timehammer:
