- (WIP) event-driven architecture refactor - added liveness and readyness

--- a/wksp/timehammer/common/src/main/resources/timehammer_common.yaml
+++ b/wksp/timehammer/common/src/main/resources/timehammer_common.yaml
@@ -7,6 +7,10 @@ quarkus:
       com.kronostools.timehammer:
         level: INFO
 
+  kafka:
+    health:
+      enabled: true
+
 kafka:
   bootstrap:
     servers: kafka:9092
