--- a/wksp/timehammer/servicebase/pom.xml
+++ b/wksp/timehammer/servicebase/pom.xml
@@ -29,6 +29,10 @@
       <groupId>${quarkus.platform.group-id}</groupId>
       <artifactId>quarkus-resteasy-jackson</artifactId>
     </dependency>
+    <dependency>
+      <groupId>${quarkus.platform.group-id}</groupId>
+      <artifactId>quarkus-smallrye-health</artifactId>
+    </dependency>
   </dependencies>
 
   <modules>
