--- a/wksp/timehammer/telegramchatbotnotifier/src/main/resources/application.yaml
+++ b/wksp/timehammer/telegramchatbotnotifier/src/main/resources/application.yaml
@@ -20,3 +20,8 @@ camel:
 timehammer:
   chatbot:
     token: ${TIMEHAMMER_CHATBOT_TOKEN}
+
+"%localdemo":
+  timehammer:
+    chatbot:
+      token: ${TIMEHAMMER_CHATBOT_TOKEN_DEMO}
