- (WIP) event-driven architecture refactor - (WIP) preparing native build - changed the way services are mocked in order to be able to redefine them at runtime

--- a/wksp/timehammer/common/src/main/resources/timehammer_common.yaml
+++ b/wksp/timehammer/common/src/main/resources/timehammer_common.yaml
@@ -21,3 +21,10 @@ kafka:
       category:
         com.kronostools.timehammer:
           level: DEBUG
+
+"%remotedemo":
+  quarkus:
+    log:
+      category:
+        com.kronostools.timehammer:
+          level: DEBUG
