- (WIP) event-driven architecture refactor - (WIP) preparing native build

--- a/wksp/timehammer/scheduler/src/main/resources/application.yaml
+++ b/wksp/timehammer/scheduler/src/main/resources/application.yaml
@@ -79,3 +79,11 @@ timehammer:
         enabled: false
       update-workers-status:
         enabled: false
+
+"%remotedemo":
+  timehammer:
+    schedules:
+      update-workers-holidays:
+        enabled: false
+      update-workers-status:
+        enabled: false
