--- a/wksp/reverseproxy/config/nginx/proxy-confs/timehammer.subdomain.conf
+++ b/wksp/reverseproxy/config/nginx/proxy-confs/timehammer.subdomain.conf
@@ -11,7 +11,7 @@ server {
     location / {
         include /config/nginx/proxy.conf;
         resolver 127.0.0.11 valid=30s;
-        set $upstream_app timehammer;
+        set $upstream_app web;
         set $upstream_port 8080;
         set $upstream_proto http;
         proxy_pass $upstream_proto://$upstream_app:$upstream_port;
