--- a/docker-compose.nativeremote.yml
+++ b/docker-compose.nativeremote.yml
@@ -2,6 +2,11 @@ version: '3'
 services:
   db:
     image: postgres:12.2-alpine
+    logging:
+      driver: "json-file"
+      options:
+        max-file: 5
+        max-size: 10m
     container_name: timehammer-db
     environment:
       POSTGRES_USER: timehammer
@@ -15,6 +20,11 @@ services:
     restart: unless-stopped
   reverseproxy:
     image: linuxserver/letsencrypt:1.3.0-ls109
+    logging:
+      driver: "json-file"
+      options:
+        max-file: 5
+        max-size: 10m
     container_name: timehammer-reverseproxy
     environment:
       PUID: 1001 # timehammer
@@ -39,6 +49,11 @@ services:
     restart: unless-stopped
   zookeeper:
     image: strimzi/kafka:0.17.0-kafka-2.4.0
+    logging:
+      driver: "json-file"
+      options:
+        max-file: 5
+        max-size: 10m
     container_name: timehammer-zookeeperkafka
     command: ["sh", "-c", "bin/zookeeper-server-start.sh config/zookeeper.properties"]
     environment:
@@ -48,6 +63,11 @@ services:
     restart: unless-stopped
   kafka:
     image: strimzi/kafka:0.17.0-kafka-2.4.0
+    logging:
+      driver: "json-file"
+      options:
+        max-file: 5
+        max-size: 10m
     container_name: timehammer-kafka
     command: ["sh", "-c", "bin/kafka-server-start.sh config/server.properties --override listeners=$${KAFKA_LISTENERS} --override advertised.listeners=$${KAFKA_ADVERTISED_LISTENERS} --override zookeeper.connect=$${KAFKA_ZOOKEEPER_CONNECT}"]
     depends_on:
@@ -62,6 +82,11 @@ services:
     restart: unless-stopped
   scheduler:
     image: timehammer/scheduler:1.0.0
+    logging:
+      driver: "json-file"
+      options:
+        max-file: 10
+        max-size: 25m
     container_name: timehammer-scheduler
     environment:
       QUARKUS_PROFILE: ${QUARKUS_PROFILE}
@@ -73,6 +98,11 @@ services:
     restart: unless-stopped
   catalog:
     image: timehammer/catalog:1.0.0
+    logging:
+      driver: "json-file"
+      options:
+        max-file: 5
+        max-size: 10m
     container_name: timehammer-catalog
     environment:
       TIMEHAMMER_DB_PASSWORD: ${TIMEHAMMER_DB_PASSWORD}
@@ -86,6 +116,11 @@ services:
     restart: unless-stopped
   core:
     image: timehammer/core:1.0.0
+    logging:
+      driver: "json-file"
+      options:
+        max-file: 10
+        max-size: 25m
     container_name: timehammer-core
     environment:
       TIMEHAMMER_DB_PASSWORD: ${TIMEHAMMER_DB_PASSWORD}
@@ -99,6 +134,11 @@ services:
     restart: unless-stopped
   integration:
     image: timehammer/integration:1.0.0
+    logging:
+      driver: "json-file"
+      options:
+        max-file: 5
+        max-size: 10m
     container_name: timehammer-integration
     environment:
       QUARKUS_PROFILE: ${QUARKUS_PROFILE}
@@ -110,6 +150,11 @@ services:
     restart: unless-stopped
   comunytek:
     image: timehammer/comunytek:1.0.0
+    logging:
+      driver: "json-file"
+      options:
+        max-file: 10
+        max-size: 10m
     container_name: timehammer-comunytek
     volumes:
       - comunytekdata:/data
@@ -123,6 +168,11 @@ services:
     restart: unless-stopped
   commandprocessor:
     image: timehammer/commandprocessor:1.0.0
+    logging:
+      driver: "json-file"
+      options:
+        max-file: 5
+        max-size: 10m
     container_name: timehammer-commandprocessor
     environment:
       QUARKUS_PROFILE: ${QUARKUS_PROFILE}
@@ -134,6 +184,11 @@ services:
     restart: unless-stopped
   telegramchatbot:
     image: timehammer/telegramchatbot:1.0.0
+    logging:
+      driver: "json-file"
+      options:
+        max-file: 5
+        max-size: 10m
     container_name: timehammer-telegramchatbot
     environment:
       TIMEHAMMER_CHATBOT_TOKEN: ${TIMEHAMMER_CHATBOT_TOKEN}
@@ -147,6 +202,11 @@ services:
     restart: unless-stopped
   telegramchatbotnotifier:
     image: timehammer/telegramchatbotnotifier:1.0.0
+    logging:
+      driver: "json-file"
+      options:
+        max-file: 5
+        max-size: 10m
     container_name: timehammer-telegramchatbotnotifier
     environment:
       TIMEHAMMER_CHATBOT_TOKEN: ${TIMEHAMMER_CHATBOT_TOKEN}
@@ -160,6 +220,11 @@ services:
     restart: unless-stopped
   web:
     image: timehammer/web:1.0.0
+    logging:
+      driver: "json-file"
+      options:
+        max-file: 5
+        max-size: 10m
     container_name: timehammer-web
     environment:
       QUARKUS_PROFILE: ${QUARKUS_PROFILE}
@@ -173,6 +238,11 @@ services:
     restart: unless-stopped
   statemachine:
     image: timehammer/statemachine:1.0.0
+    logging:
+      driver: "json-file"
+      options:
+        max-file: 5
+        max-size: 10m
     container_name: timehammer-statemachine
     volumes:
       - statemachinedata:/data
